Fixed spacing in global and added better images

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
 }
 
 img {
-  max-width: 80%;
+  max-width: 100%;
   height: auto;
 }
 
